docs: delete unnecessary script tags in html, corrections of letter-spacing in style.css

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
     padding: 0px;
     margin: 0px;
-    box-sizing: border-box
+    box-sizing: border-box;
+    font-family: "Lato", sans-serif;
 }
 
 .container {
@@ -31,7 +32,8 @@
     font-weight: bold;
     font-size: 24.2902px;
     line-height: 6px;
-    color: #ffffff
+    color: #ffffff;
+    letter-spacing: -0.9px;
 }
 
 .header__logo-span {
@@ -76,6 +78,7 @@
     font-weight: bold;
     font-size: 11.6593px;
     line-height: 1;
+    letter-spacing: -0.3px;
     color: #ffffff;
     text-decoration: none
 }
@@ -142,29 +145,30 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 68px 20px 30px 40px
+    font-family: Lato;
+    padding: 68px 20px 29px 40px
 }
 
 .services__heading {
-    font-family: Lato;
     font-style: normal;
     font-weight: 900;
     font-size: 29.6188px;
     line-height: 18px;
     color: #666d89;
-    letter-spacing: 0.5px;
+    letter-spacing: -3.1px;
     margin-bottom: 29px;
     text-align: justify
 }
 
 .services__text {
-    font-family: Lato;
     font-style: normal;
     font-weight: 200;
     font-size: 18px;
     line-height: 30px;
     color: #767e9e;
-    margin-bottom: 46px;
+    margin-bottom: 45px;
+    letter-spacing: -0.4px;
+    padding-right: 15px;
     text-align: justify
 }
 
@@ -182,7 +186,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-bottom: 31px;
+    margin-bottom: 32px;
     padding-right: 20px;
     width: 33.33333%
 }
@@ -192,8 +196,8 @@
 }
 
 .card__img {
-    width: 59px;
-    height: 59px
+    width: 60px;
+    height: 60px
 }
 
 .card__heading-text {
@@ -201,19 +205,17 @@
 }
 
 .card__heading {
-    font-family: Lato;
     font-style: normal;
     font-weight: 900;
     font-size: 17px;
     line-height: 15px;
     color: #666d89;
-    letter-spacing: 0.65px;
+    letter-spacing: -1.5px;
     margin-bottom: 12px;
     text-align: justify
 }
 
 .card__text {
-    font-family: Lato;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -236,7 +238,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 69px 40px 47px 40px
+    padding: 68px 40px 44px 40px
 }
 
 .portfolio__heading {
@@ -244,8 +246,8 @@
     font-size: 29.6188px;
     line-height: 18px;
     color: #666d89;
-    margin-bottom: 26px;
-    letter-spacing: 1px
+    margin-bottom: 28px;
+    letter-spacing: -2px;
 }
 
 .portfolio__text {
@@ -254,7 +256,7 @@
     line-height: 30px;
     color: #767e9e;
     margin-bottom: 12px;
-    letter-spacing: -0.2px
+    letter-spacing: -0.5px
 }
 
 .portfolio__navigation {
@@ -323,7 +325,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 69px 40px 67px 40px
+    padding: 69px 40px 66px 40px
 }
 
 .about__heading {
@@ -332,7 +334,7 @@
     line-height: 18px;
     color: #666d89;
     margin-bottom: 28px;
-    letter-spacing: 1px
+    letter-spacing: -2.6px
 }
 
 .about__text {
@@ -340,8 +342,9 @@
     font-size: 18px;
     line-height: 30px;
     color: #767e9e;
-    margin-bottom: 45px;
-    letter-spacing: -0.2px
+    margin-bottom: 44px;
+    letter-spacing: -0.4px;
+    padding-right: 15px;
 }
 
 .about__cards {
@@ -370,7 +373,8 @@
     font-size: 17.7713px;
     line-height: 18px;
     color: #666d89;
-    margin-bottom: 10px
+    letter-spacing: -2.5px;
+    margin-bottom: 10px;
 }
 
 .about-card__text {
@@ -379,6 +383,7 @@
     font-size: 12px;
     line-height: 22px;
     color: #767e9e;
+    letter-spacing: -0.3px;
     margin-bottom: 22.78px
 }
 
@@ -428,7 +433,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 69px 40px 21px 40px
+    padding: 69px 40px 22px 40px
 }
 
 .get-a-quote__heading {
@@ -438,7 +443,7 @@
     line-height: 18px;
     color: #f0d8d9;
     margin-bottom: 28px;
-    letter-spacing: 0.5px
+    letter-spacing: -3px
 }
 
 .get-a-quote__text {
@@ -448,7 +453,8 @@
     line-height: 30px;
     color: #f0d8d9;
     margin-bottom: 43px;
-    letter-spacing: -0.2px;
+    letter-spacing: -0.5px;
+    /* padding-right: 15px; */
     text-align: justify
 }
 
@@ -511,7 +517,7 @@
     resize: none;
     margin-bottom: 5px;
     padding-top: 6px;
-    letter-spacing: -1.7px
+    letter-spacing: -0.1px
 }
 
 .form__button {
@@ -540,7 +546,7 @@
     line-height: 18px;
     color: #f0d8d9;
     margin-bottom: 10px;
-    letter-spacing: 0.3px
+    letter-spacing: -1.6px
 }
 
 .contacts__text {
